--- a/jobpostings/src/main/resources/templates/index.html
+++ b/jobpostings/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
@@ -6,37 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Job Board app here</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        .container{
-            vertical-align: top;
-            display: inline-block;
-        }
-        .reg {
-            background-color:lightblue;
-            width: 300px;
-            height:300px;
-            vertical-align: top;
-            display: inline-block;
-        }
-        .login {
-            vertical-align: top;
-            width:300px;
-            background-color:lightpink;
-            height: 250px;
-            display: inline-block;
-        }
-        </style>
-
 </head>
 
 <body>
     <h3> Welcome! Please login to the job board app</h3>
-
-    {% if messages %}
-    {% for message in messages %}
-    <p>{{message}}</p>
-    {% endfor %}
-    {% endif %}
 
 
     <div class="container">
@@ -45,50 +18,23 @@
         <div class="reg">
             <h3>Registration </h3>
 
-            <form action="registerProcess" method="POST">
-                {% csrf_token %}
-                <table>
-                    <tr>
-                        <td>First Name:</td>
-                        <td><input type="text" name="name"></td>
-                    </tr>
-                    <tr>
-                        <td>Last Name:</td>
-                        <td><input type="text" name="name"></td>
-                    </tr>
-                    <tr>
-                        <td>Email:</td>
-                        <td><input type="text" name="email"></td>
-                    </tr>
-                    <tr>
-                        <td>Password:</td>
-                        <td><input type="password" name="password"></td>
-                    </tr>
-                    <tr>
-                        <td>Confirm Password:</td>
-                        <td><input type="password" name="confirm_password"></td>
-                    </tr>
-                </table>
-                <button type="submit">Register</button>
-            </form>
-
-        </div>
-
-        <div class="login">
-            <h3>Login</h3>
-            <form action="loginProcess" method="POST">
-                {% csrf_token %}
-                <table>
-                    <tr>
-                        <td>Email</td>
-                        <td><input type="text" name="login_email"></td>
-                    </tr>
-                    <tr>
-                        <td>Password</td>
-                        <td><input type="password" name="login_password"></td>
-                    </tr>
-                </table>
-                <button type="submit">Login</button>
+            <form action="registerProcess" method="POST" th:action=" @{/register}" th:object="${userObject}">
+                <p th:errors="*{firstname}"></p>
+                <p th:errors="*{lastname}"></p>
+                <p th:errors="*{email}"></p>
+                <p th:errors="*{password}"></p>
+                <p th:errors="*{confirm_password}"></p>
+                <p>First Name:</p>
+                <p><input type="text" th:field="*{firstname}" /></p>
+                <p>Last Name:</p>
+                <p><input type="text" th:field="*{lastname}" /></p>
+                <p>Email:</p>
+                <p><input type="text" th:field="*{email}" /></p>
+                <p>Password:</p>
+                <p><input type="text" th:field="*{password}" /></p>
+                <p>Confirm Password:</p>
+                <p><input type="text" th:field="*{confirm_password}" /></p>
+                <input type="submit" value="Register" />
             </form>
 
         </div>
